--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@angular/router": "~9.0.7",
     "angularx-social-login": "^2.3.0",
     "chart.js": "^2.9.3",
+    "file-saver": "^2.0.2",
+    "filesaver": "0.0.13",
     "ng2-charts": "^2.3.2",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
